--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -155,7 +155,7 @@ img.thumbnail {
 	border: 1px solid #E9E9E9;
 	}
 
-img.selected-thumbnail {
+.image-thumbnail img.selected-thumbnail {
 	border: 1px solid green;
 }
 
