--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2564,7 +2564,25 @@ border-bottom: 1px solid #e9e9e9!important;
 	width:400px;
 }      
 
+.view-events {
+	width:980px;
+}
 
+.view-events .view-filters {
+	height:120px;
+	}
+
+.views-view-grid {
+	margin-top: .5em;
+}
+
+.views-view-grid td {
+	padding-left:0px;
+	padding-right:0px;
+}
+
+
+/* NAVIGATION */
 #block-system-navigation {
   display: block;
   height: 33px;
