--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2587,7 +2587,12 @@ border-bottom: 1px solid #e9e9e9!important;
   height: 33px;
   background-color: #384551;
   margin-top: 5px; 
+  margin-bottom: 20px;
   width:100%;
+}
+
+.page-photographer #block-system-navigation {
+	margin-bottom: 0px;
 }
 
 #block-system-navigation ul li {
