Refactored user and anonymous user menues to depend on configuration rather then code. Styling of menues and forms.

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -12,7 +12,7 @@ background:none !important;
 }*/
 a {
 	outline:none;
-	text-decoration:none!important;
+	text-decoration:none;
 }
 img {
 	border:0 none;
@@ -149,6 +149,14 @@ it
 .page-title {
 	display:none
 }
+.page-user-edit .page-title,
+.page-user-register .page-title {
+	display:inline;
+	width:500px;
+	float:left;
+	
+}
+
 
 .facebook-logo {
 	background:url('../images/facebook-login.png') no-repeat;
@@ -599,7 +607,6 @@ display:none;
 
 .page-user .form-item {
 	clear:both;
-	margin-bottom:10px;
 	display:block;
 	height:45px;
 }
@@ -610,7 +617,14 @@ display:none;
 	 width: 300px;
 	 clear:right;
 	}
-	
+
+#modal-content label {
+	display:block;
+}
+#modal-content .description {
+	display:none;
+	}
+
 .page-user .form-text {
 	float:right;
 	width:300px;
@@ -722,6 +736,7 @@ display:none;
 #edit-actions {
 	float:right;
 	width:152px;
+	margin-top:0px;
 	}
 .one-sidebar .content span table{
 display:none !important;
@@ -784,16 +799,21 @@ color:#4ab0f8 !important;
 
 
 #user-register-form .confirm-parent, 
-#user-register-form .password-parent {
+#user-register-form .password-parent,
+.page-user .confirm-parent,
+.page-user .password-parent {
 	width:auto;
 	}
+
+.password-suggestions {
+	display:none!important;
+}
 
 .content .login #login-form{
 margin:0 auto !important;
 height:auto !important;
 float:none !important;
 }
-
 
 .page-user #user-login #edit-actions
 {
@@ -1148,10 +1168,9 @@ margin-top:0 !important;
 	padding:7px;
 }
 .toolbar-drawer #edit-actions{
-float:left;
-
-padding:0;
-margin-left:25px;
+	float:left;
+	padding:0;
+	margin-left:25px;
 } 
 .toolbar-drawer #edit-actions #edit-submit{
 	float:left;
@@ -1290,9 +1309,10 @@ text-align:center;
 }
 #user-profile-form .form-type-checkbox .description
 {
-    width: 328px;
+    width: 300px;
     float:right;
 	display:block;
+	margin-left:0px;
 }
 #user-profile-form #paypal_icon
 {
@@ -2407,16 +2427,20 @@ border-bottom: 1px solid #e9e9e9!important;
 .form-text {	
     border: 1px solid #DEE4E7;
    	border-radius: 3px 3px 3px 3px;
-    color: #1A253C;
+    color: #6A758C;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 18px;
+    font-size: 13px;
     height: 40px;
-    text-indent: 7px;
+    text-indent: 18px;
     width:400px;
     padding:0px;
     vertical-align: middle;
 	}
-	
+
+.form-text:focus {
+	color:black;
+	}
+
 #runner_number {
     width: 220px;
 }
