--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1469,23 +1469,7 @@ display:none!important;
 position:relative;
 
 }
-.page-search-result .region-content .content table tr td .views-field-check-box .field-content .node_check{
-	float: right;
-    margin-top: -127px;
-    position: relative;
-    right: 0;
-    top: 0;
-    width: 28px;
-    z-index: 1;
-}
-.page-search-result .region-content .content table tr td,.page-search-result .region-content .content table tr th{
-width:170px;
-height:158px;
-padding:0px 10px !important; 
-}
-.page-search-result .region-content .content table tr td{
-text-align:justify;
-}
+
 
 
 /*-----UI_21-02-12-------*/
@@ -1633,11 +1617,7 @@ text-align:justify;
 	font-weight: normal;
 	font-style: normal;
 }
-.page-search-result .left-corner {
-   min-height: 920px;
-   border-bottom: 10px solid #E8E8E8;
 
-}
 
 div.form-item-url-hidden ,
 .page-search-result .left-corner #tabs-wrapper h1{
@@ -1667,23 +1647,17 @@ ul#edit-file_filelist{
 }
 
 /* 13.03.2012 */
-.page-search-result .node_cost,.page-cart .node_cost {
-  background: url("../images/price-bg.png") no-repeat scroll left center transparent;
+.node_cost {
+  border-radius:20px;
   color:#fff;
+  background-color:green;
   font-size: 12px;
-  width: 60px;
-  height: 59px;
-  line-height: 61px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
   text-align: center;
 }
-.views-field-sell-price {
-  height:45px; 
-  width:44px; 
-  position:relative; 
-  top:4px; 
-  z-index:1; 
- 
-}
+
 .page-cart #prev_img_cart {
   text-align: right;
   width: 464px;
@@ -1816,8 +1790,6 @@ background: url("../images/cart-full.png") no-repeat scroll left center transpar
     height: 50px;
     top : 14px;
     z-index: 1;
-
-  
 }
 
 
