--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -266,7 +266,7 @@ float:left;
 	width:167px;
 	height:34px;
 	padding:2px;
-	text-indent:7px;
+	padding-left:7px;
 }
 .border-radius {
 	color:#1a253c;
@@ -1407,9 +1407,10 @@ text-align:center;
     -webkit-box-shadow: none !important; 
 	-moz-box-shadow: none !important; 
 	box-shadow: none !important;
-    padding: 2px;
-    text-indent: 7px;
-	margin-right:10px;
+    padding-left:7px;
+	padding-top: 2px;
+    padding-bottom: 2px;
+    margin-right:10px;
 	float:left;
 	
 
@@ -2403,15 +2404,17 @@ border-bottom: 1px solid #e9e9e9!important;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 13px;
     height: 40px;
-    text-indent: 18px;
+    padding-left:18px;
     width:400px;
-    padding:0px;
     vertical-align: middle;
 	}
 
 .form-text:focus {
 	color:black;
-	}
+    outline: none;
+    box-shadow: 0px 0px 7px #6AD0e8;
+    border-color: #6AD0e8;
+}
 
 #runner_number {
     width: 220px;
@@ -2439,7 +2442,7 @@ border-bottom: 1px solid #e9e9e9!important;
 	display: 				inline-block;
 	position: 				relative;
 	width: 150px;
-	height: 40px;
+	height: 44px;
 	float:right;
 	-webkit-border-radius: 	5px;
 	-moz-border-radius: 	5px;
