--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2642,3 +2642,21 @@ border-bottom: 1px solid #e9e9e9!important;
 	margin-top:0px;
 	margin-left:0.5em;
 	}
+        
+.node-type-product #prev-next-container {
+  width: 400px;
+  height: 20px;
+  border: 1px solid #DEE4E7;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  -moz-border-radius:5px;
+  -o-border-radius:5px;
+}
+
+.node-type-product #prev-product {
+  float: left;
+}
+
+.node-type-product #next-product {
+  float: right;
+}
