Changed the styling of the next/prev navigation for product image.

--- a/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
+++ b/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
@@ -11,9 +11,13 @@
 }*/
 
 .node-type-product .product_preview {
-	width:400px;
 	float:left;
         border: 1px solid #DEE4E7;
+        padding:2px;
+}
+
+.node-type-product .field-name-uc-product-image {
+	margin-bottom:0px;
 }
 
 .node-type-product .product_content {
