--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2644,14 +2644,24 @@ border-bottom: 1px solid #e9e9e9!important;
 	}
         
 .node-type-product #prev-next-container {
-  width: 400px;
-  height: 20px;
-  border: 1px solid #DEE4E7;
-  border-radius:5px;
-  -webkit-border-radius:5px;
-  -moz-border-radius:5px;
-  -o-border-radius:5px;
-}
+	margin-left:3px;
+	top: 27px;
+	position: relative;
+	background-color: #FFF;
+	opacity: 0.6;
+	padding-left: 10px;
+	padding-right: 10px;
+	
+ 	width: 380px;
+  	height: 25px;
+  	border-bottom: 1px solid #333;
+ }
+
+.node-type-product #prev-next-container a {
+	color:#000;
+	font-size:14pt;
+	} 
+
 
 .node-type-product #prev-product {
   float: left;
