--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2670,3 +2670,7 @@ border-bottom: 1px solid #e9e9e9!important;
 .node-type-product #next-product {
   float: right;
 }
+
+.page-user #edit-id-display {
+  display: none;
+}
