Fixing sport_event.css

--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -262,6 +262,6 @@ width: 108px!important;
   
 }
 
-.field-name-field-geolocation { 
-  float:none; 
+.node-event .field-name-field-geolocation {
+  float: none;
 }
