--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -264,5 +264,7 @@ width: 108px!important;
 }
 
 .node-event .field-name-field-geolocation {
-  float: none;
+  clear: both;
+  float: left;
+  width: 100%;
 }
