--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2716,3 +2716,26 @@ border-bottom: 1px solid #e9e9e9!important;
 .page-user #edit-id-display {
   display: none;
 }
+
+#block-locale-language-content {
+  float: left;
+  margin-left: 20px;
+  width: 20px;
+  height: 30px;
+}
+
+#block-locale-language-content li {
+  margin: 0px;
+}
+
+#block-locale-language-content a {
+  overflow: hidden;
+  display: block;
+  width: 16px;
+  height: 14px;
+}
+
+#block-locale-language-content .language-switcher-locale-url {
+  margin: 0px;
+  padding: 0px;
+}
