--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -68,9 +68,7 @@
 	diplay: inline;
 }
 
-.page-search-result .proceed_to_cart a {
-	background: transparent url(images/Cart-Summary.png) no-repeat scroll
-		0px 0px;
+.proceed_to_cart a {
 	font-size: 14px;
 	text-align: center;
 	float: right;
@@ -80,6 +78,9 @@
 	position: relative;
 }
 
+.i18n-en .proceed_to_cart a {
+	background: transparent url(images/Cart-Summary.png) no-repeat scroll 0px 0px;
+}
 .proceed_to_cart a {
 	color: #34373A;
 }
@@ -118,6 +119,85 @@
 	-moz-border-radius: 5px;
 	margin-left: -10px;
 }
+
+.page-search-result #photo_cost
+{
+   float:left;
+   /*padding:0 0 0px 100px;*/
+   height:20px;
+}
+.photo_cost, .photo_author
+{
+   float:right;
+    margin-left:5px;
+    color:#ff6600;
+    font-weight:normal;
+}
+.page-search-result #photo_author
+{
+   clear:left;
+   float:left;
+   padding:0 0 0px 0;
+   height:20px;
+}
+
+.page-search-result #search-result-cart
+{
+   float:left;
+}
+.page-search-result #search-result-cart #add_to_cart
+{
+    height:37px;
+   color:#34373a;
+   font-size:14px;
+   padding-left:38px;
+   border:0 none;
+   cursor:pointer;
+   outline:none;
+   font-family:Arial,Helvetica,sans-serif,Sans-Serif;
+   font-weight: bold;
+   position: relative;
+   top: -22px;
+   right: 0px;
+   float: right;
+   margin-top:0px;
+   margin-right:10px;
+   -webkit-transition: none;
+}
+
+#search-result-cart .add_cart {
+	 width:139px;
+}
+	
+.i18n-en #search-result-cart .add_cart{
+	background: url(images/add-to-cart.png) no-repeat scroll 0 0 transparent !important;
+}
+
+.i18n-ru #search-result-cart .add_cart{
+	background: url(images/add-to-cart-ru.png) no-repeat scroll 0 0 transparent !important;
+}
+
+.i18n-en #search-result-cart .remove_cart {
+	width:183px;
+ 	background: url(images/remove-from-cart.png) no-repeat scroll 0 0 transparent !important;
+}
+
+.i18n-ru #search-result-cart .remove_cart {
+	width:139px;
+ 	background: url(images/remove-from-cart-ru.png) no-repeat scroll 0 0 transparent !important;
+}
+
+.page-search-result #edit-search-filter .form-submit {
+	float:left;
+	margin-left:20px;
+}
+
+.page-search-result .region-content .content table tr td{
+position:relative;
+
+}
+
+
 
 #field-event label {
 	color: rgb(148, 187, 31);
