--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -351,7 +351,7 @@ form#select-event-runner-get-photos {
 	width: 30%
 }
 
-.page-search-result #photo-request-form {
+.page-search-result #photo-search-request-form {
 	/*  border:1px solid #cccccc; */
 	padding: 20px;
 	/*  height: 280px;*/
